--- a/MotorsportsPhysics/Components/Pages/SignUp.razor
+++ b/MotorsportsPhysics/Components/Pages/SignUp.razor
@@ -8,7 +8,7 @@
 @inject MotorsportsDbContext _context
 @inject PasswordSecurityService PasswordSecurity
 
-@page "/signin"
+@page "/signUp"
 
 <div class="relative flex min-h-[85vh] w-full flex-col items-center justify-center overflow-x-hidden p-4">
     <div class="absolute inset-0 z-0 h-full w-full bg-cover bg-center opacity-20" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC3Lyi1FcGUPviuKqeB45wb7ihIzIbxvszyNRt6XNseAiP3-TfypdFa_TL_gRop8B38tx4AfqL3w3PfC8BXA45c9XNWMn0WCLUFJgREKm6T4Hr53xRhh5VNnVXmwBIWSmFLd4_5YWhDAvaQIyQFJ95JtPU0rXOAGRMmW78dIT_-KC4nlTIGq6GULN_w2KAegh8jnv6MZOOLuwYK72a5RppdaUOGThVjJ1f7dD1tVn-2qMHmoxiekWqeUWZoUiK7j61IPXF6E6w_hosK");'></div>
