--- a/MotorsportsPhysics/Components/_Imports.razor
+++ b/MotorsportsPhysics/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using MotorsportsPhysics.Components
 @using MotorsportsPhysics.Components.Shared
 @using MotorsportsPhysics.Components.Layout
+@attribute [Microsoft.AspNetCore.Authorization.Authorize]
