Added Maxie Finish Menu

--- a/MotorsportsPhysics/Components/Layout/NavMenu.razor
+++ b/MotorsportsPhysics/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿  <header class="sticky top-0 z-20 w-full bg-background-light/80 backdrop-blur-sm" @attributes="AdditionalAttributes">
+﻿﻿  <header class="sticky top-0 z-20 w-full bg-background-light/80 backdrop-blur-sm" @attributes="AdditionalAttributes">
     <div class="container mx-auto flex items-center justify-between whitespace-nowrap border-b border-primary/20 px-4 sm:px-6 lg:px-8 py-3">
       <div class="flex items-center gap-4 text-gray-800">
         <img src="/favicon.png" alt="Favicon" style="height: 28px; width: 32px; vertical-align: middle;" />
